<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_temperature"
            android:icon="@drawable/ic_menu_temperature"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_humidity"
            android:icon="@drawable/ic_menu_humidity"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_airPressure"
            android:icon="@drawable/ic_menu_airpressure"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
